Fix Vercel deployment: disable native pg modules and add SSL config

--- a/vercel.json
+++ b/vercel.json
@@ -17,6 +17,12 @@
     }
   ],
   "env": {
-    "NODE_ENV": "production"
+    "NODE_ENV": "production",
+    "PGSSLMODE": "require"
+  },
+  "functions": {
+    "server.js": {
+      "maxDuration": 10
+    }
   }
 }
