--- a/package.json
+++ b/package.json
@@ -23,6 +23,12 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "redis": "^4.6.13",
+    "mongodb": "^6.5.0",
+    "sqlite3": "^5.1.6",
+    "@libsql/client": "^0.6.0",
+    "@supabase/supabase-js": "^2.39.7",
+    "@neondatabase/serverless": "^0.9.3"
   }
 }
