--- a/vercel.json
+++ b/vercel.json
@@ -18,7 +18,7 @@
   ],
   "env": {
     "NODE_ENV": "production",
-    "ACTIVE_DATABASE": "supabase",
+    "ACTIVE_DATABASE": "supabase_rest",
     "PGSSLMODE": "require"
   }
 }
