--- a/vercel.json
+++ b/vercel.json
@@ -10,9 +10,16 @@
     {
       "src": "/api/(.*)",
       "dest": "/server.js",
-      "headers": {
-        "Content-Security-Policy": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self'; connect-src 'self' https:; frame-src 'none'; object-src 'none'; base-uri 'self'; form-action 'self';"
-      }
+      "headers": [
+        {
+          "key": "x-vercel-protection-bypass",
+          "value": "true"
+        },
+        {
+          "key": "Content-Security-Policy",
+          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self'; connect-src 'self' https:; frame-src 'none'; object-src 'none'; base-uri 'self'; form-action 'self';"
+        }
+      ]
     },
     {
       "src": "/(.*)",
@@ -22,6 +29,11 @@
       }
     }
   ],
+  "functions": {
+    "server.js": {
+      "maxDuration": 15
+    }
+  },
   "env": {
     "NODE_ENV": "production",
     "ACTIVE_DATABASE": "supabase_rest",
