--- a/vercel.json
+++ b/vercel.json
@@ -9,24 +9,11 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/server.js",
-      "headers": [
-        {
-          "key": "x-vercel-protection-bypass",
-          "value": "true"
-        },
-        {
-          "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self'; connect-src 'self' https:; frame-src 'none'; object-src 'none'; base-uri 'self'; form-action 'self';"
-        }
-      ]
+      "dest": "/server.js"
     },
     {
       "src": "/(.*)",
-      "dest": "/server.js",
-      "headers": {
-        "Content-Security-Policy": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self'; connect-src 'self' https:; frame-src 'none'; object-src 'none'; base-uri 'self'; form-action 'self';"
-      }
+      "dest": "/server.js"
     }
   ],
   "functions": {
