Исправлены таймауты Supabase для стабильной работы на Vercel
- Увеличены таймауты инициализации Supabase (20 сек на Vercel, 10 сек локально)
- Добавлены переменные окружения SUPABASE_INIT_TIMEOUT и SUPABASE_REQUEST_TIMEOUT
- Реализована экспоненциальная задержка для повторных попыток
- Оптимизирована инициализация (lazy loading) для снижения нагрузки
- Увеличен maxDuration в vercel.json до 25 секунд
- Улучшено логирование таймаутов и статуса подключения

--- a/vercel.json
+++ b/vercel.json
@@ -18,12 +18,14 @@
   ],
   "functions": {
     "server.js": {
-      "maxDuration": 15
+      "maxDuration": 25
     }
   },
   "env": {
     "NODE_ENV": "production",
     "ACTIVE_DATABASE": "supabase_rest",
-    "PGSSLMODE": "require"
+    "PGSSLMODE": "require",
+    "SUPABASE_INIT_TIMEOUT": "20000",
+    "SUPABASE_REQUEST_TIMEOUT": "18000"
   }
 }
