Убрал переменные окружения из vercel.json для исправления деплоя
Переменные окружения SUPABASE_INIT_TIMEOUT и SUPABASE_REQUEST_TIMEOUT
должны быть установлены в настройках проекта Vercel, а не в конфигурационном файле

--- a/vercel.json
+++ b/vercel.json
@@ -24,8 +24,6 @@
   "env": {
     "NODE_ENV": "production",
     "ACTIVE_DATABASE": "supabase_rest",
-    "PGSSLMODE": "require",
-    "SUPABASE_INIT_TIMEOUT": "20000",
-    "SUPABASE_REQUEST_TIMEOUT": "18000"
+    "PGSSLMODE": "require"
   }
 }
