Migrate to FastAPI: Complete rewrite in Python with FastAPI, SQLAlchemy, and Vercel Postgres
- Replace Node.js/Express with FastAPI for better performance
- Implement SQLAlchemy ORM with PostgreSQL support
- Create Pydantic schemas for API validation
- Set up Vercel deployment for Python functions
- Add comprehensive test suite with pytest
- Update frontend to work with new API
- Configure environment for production deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,26 @@
 {
   "version": 2,
-  "functions": {
-    "server.js": {
-      "maxDuration": 25
-    }
-  },
-  "routes": [
+  "builds": [
     {
-      "src": "/api/(.*)",
-      "dest": "/server.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/server.js"
+      "src": "main.py",
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "50mb"
+      }
     }
   ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/main.py"
+    }
+  ],
+  "functions": {
+    "main.py": {
+      "maxDuration": 10
+    }
+  },
   "env": {
-    "NODE_ENV": "production",
-    "ACTIVE_DATABASE": "vercel_postgres",
-    "PGSSLMODE": "require"
+    "ENVIRONMENT": "production"
   }
 }
