--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@libsql/client": "^0.6.0",
     "@neondatabase/serverless": "^0.9.3",
     "@supabase/supabase-js": "^2.39.7",
+    "@vercel/postgres": "^0.10.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "pg": "^8.16.3",
     "redis": "^4.6.13",
