--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ psycopg2-binary==2.9.9
 alembic==1.12.1
 python-dotenv==1.0.0
 pydantic==2.5.0
+mangum==0.17.0
 pytest==7.4.3
 pytest-asyncio==0.21.1
 httpx==0.25.2
