Complete Vercel deployment setup: Separate API and static routes
- Create api/index.py for serving static HTML page
- Create api/main.py for API endpoints only
- Update vercel.json with proper routing for API vs static content
- Configure Mangum handlers for Vercel serverless functions

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "main.py",
+      "src": "api/index.py",
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "50mb"
+      }
+    },
+    {
+      "src": "api/main.py",
       "use": "@vercel/python",
       "config": {
         "maxLambdaSize": "50mb"
@@ -11,8 +18,12 @@
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "/api/main.py"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/main.py"
+      "dest": "/api/index.py"
     }
   ]
 }
