Fix Vercel deployment issues
- Fix database initialization to be lazy (prevent cold start crashes)
- Update Vercel config for better FastAPI compatibility
- Clean up Supabase connection parameters for psycopg2
- Update Pydantic schemas for V2 compatibility
- Improve error handling for database connections

--- a/vercel.json
+++ b/vercel.json
@@ -2,21 +2,22 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/main.py",
+      "src": "main.py",
       "use": "@vercel/python",
       "config": {
-        "maxLambdaSize": "50mb"
+        "maxLambdaSize": "15mb"
       }
     }
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/main.py"
-    },
-    {
       "src": "/(.*)",
-      "dest": "/api/main.py"
+      "dest": "/main.py"
     }
-  ]
+  ],
+  "functions": {
+    "main.py": {
+      "maxDuration": 10
+    }
+  }
 }
