--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,16 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "main.py",
-      "use": "@vercel/python",
-      "config": {
-        "maxLambdaSize": "15mb"
-      }
+  "functions": {
+    "main.py": {
+      "runtime": "@vercel/python",
+      "maxDuration": 10,
+      "maxLambdaSize": "15mb"
     }
-  ],
+  },
   "routes": [
     {
       "src": "/(.*)",
       "dest": "/main.py"
     }
-  ],
-  "functions": {
-    "main.py": {
-      "maxDuration": 10
-    }
-  }
+  ]
 }
