--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
-# Minimal requirements for Vercel Python runtime
-# Only include what's absolutely necessary
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+sqlalchemy==2.0.23
+psycopg2-binary==2.9.9
+python-dotenv==1.0.0
+pydantic==2.5.0
