--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ psycopg2-binary==2.9.9
 python-dotenv==1.0.0
 pydantic==1.10.13
 flask-cors==4.0.0
+PyJWT==2.8.0
 pytest==7.4.3
 pytest-flask==1.2.0
 # Force rebuild marker v4
