--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "scripts": {
     "test": "playwright test",
     "test:headed": "playwright test --headed",
-    "test:ui": "playwright test --ui"
+    "test:ui": "playwright test --ui",
+    "dev": "python main.py",
+    "worker": "python run_worker.py",
+    "init-db": "python create_tables.py",
+    "create-test-rules": "python create_test_rules.py",
+    "test:unit": "python -m pytest tests/test_models.py tests/test_cache.py tests/test_routing.py tests/test_celery.py -v",
+    "test:integration": "python -m pytest tests/test_api.py -v",
+    "test:e2e": "playwright test"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.0",
