--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,12 @@ psycopg2-binary==2.9.10
 python-dotenv==1.2.1
 pydantic==2.12.4
 flask-cors==6.0.1
+flask-wtf==1.2.1
 PyJWT==2.10.1
 pytest==8.4.2
 pytest-flask==1.3.0
+redis==7.0.1
+celery==5.5.3
+geoip2==5.1.0
+user-agents==2.2.0
 # Force rebuild marker v5
