--- a/package.json
+++ b/package.json
@@ -12,7 +12,14 @@
     "create-test-rules": "python create_test_rules.py",
     "test:unit": "python -m pytest tests/test_models.py tests/test_cache.py tests/test_routing.py tests/test_celery.py -v",
     "test:integration": "python -m pytest tests/test_api.py -v",
-    "test:e2e": "playwright test"
+    "test:e2e": "playwright test",
+    "test:all": "npm run test:unit && npm run test:integration && npm run test:e2e",
+    "lint": "flake8 . && black --check . && isort --check-only .",
+    "lint:fix": "black . && isort .",
+    "type-check": "mypy .",
+    "coverage": "coverage run -m pytest tests/ && coverage report",
+    "coverage:html": "coverage run -m pytest tests/ && coverage html",
+    "ci": "npm run lint && npm run type-check && npm run coverage"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.0",
