--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ flask>=2.3.0,<3.0.0
 gunicorn==21.2.0
 sqlalchemy>=1.4.0,<2.0.0
 psycopg2-binary==2.9.10
-python-dotenv==1.2.1
+python-dotenv>=0.19.0,<1.1.0
 pydantic>=1.8.0,<2.0.0
 flask-cors==6.0.1
 flask-wtf==1.2.1
