--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ sqlalchemy>=1.4.0,<2.0.0
 psycopg2-binary==2.9.10
 python-dotenv>=0.19.0,<1.1.0
 pydantic>=1.8.0,<2.0.0
-flask-cors==6.0.1
+flask-cors>=3.0.0,<6.0.0
 flask-wtf==1.2.1
 PyJWT==2.10.1
 pytest==8.4.2
