--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ python-dotenv>=0.19.0,<1.1.0
 pydantic>=1.8.0,<2.0.0
 flask-cors>=3.0.0,<6.0.0
 flask-wtf==1.2.1
-PyJWT==2.10.1
+PyJWT>=2.0.0,<3.0.0
 pytest==8.4.2
 pytest-flask==1.3.0
 redis==7.0.1
