--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,9 @@ flask-wtf==1.2.1
 PyJWT>=2.0.0,<3.0.0
 pytest>=8.0.0,<8.4.0
 pytest-flask==1.3.0
-redis==7.0.1
+redis>=3.5.0,<7.0.0
 celery==5.5.3
-geoip2==5.1.0
+geoip2>=4.0.0,<5.0.0
 user-agents==2.2.0
 black==24.10.0
 isort==5.13.2
