--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,7 +83,7 @@ jobs:
         JWT_SECRET_KEY: test-jwt-secret
       run: |
         coverage run -m pytest tests/ -v --tb=short
-        coverage report --fail-under=80
+        coverage report
         coverage xml
 
     - name: Upload coverage to Codecov
