--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,6 +119,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
+    - name: Install Playwright Test
+      run: npm install @playwright/test
+
     - name: Install Playwright
       run: npx playwright install --with-deps
 
