Fix GitHub Actions e2e-test job to work with Playwright webServer
- Remove manual Flask server startup from e2e-test job
- Playwright now handles server startup automatically via webServer config
- This prevents port conflicts and duplicate server instances

The workflow now properly uses Playwright's built-in server management

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -125,22 +125,14 @@ jobs:
     - name: Install Playwright
       run: npx playwright install --with-deps
 
-    - name: Start Flask server
+    - name: Run E2E tests
       env:
         DATABASE_URL: sqlite:///test.db
         SECRET_KEY: test-secret-key
         JWT_SECRET_KEY: test-jwt-secret
       run: |
         python create_tables.py
-        python main.py &
-        sleep 5
-
-    - name: Run E2E tests
-      env:
-        DATABASE_URL: sqlite:///test.db
-        SECRET_KEY: test-secret-key
-        JWT_SECRET_KEY: test-jwt-secret
-      run: npx playwright test
+        npx playwright test
 
     - name: Upload test results
       uses: actions/upload-artifact@v4
