Fix YAML syntax error in CI workflow
- Quote DATABASE_URL to fix YAML parsing issue with colons
- Use in-memory SQLite database for CI tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
 
     - name: Run unit tests with coverage
       env:
-        DATABASE_URL: sqlite:///test.db
+        DATABASE_URL: "sqlite:///:memory:"
         REDIS_URL: redis://localhost:6379/0
         SECRET_KEY: test-secret-key
         JWT_SECRET_KEY: test-jwt-secret
